--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,24 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
+  dio: ^5.4.0
+  hive_flutter: ^1.1.0
+  build_runner: ^2.4.7
+  uuid: ^4.2.2
+  equatable: ^2.0.5
+  shared_preferences: ^2.2.2
+  dartz: ^0.10.1
+  flutter_riverpod: ^2.4.9
+  path_provider: ^2.1.2
+  hive_generator: ^2.0.1
+  multi_select_flutter: ^4.1.3
+  connectivity_plus: ^5.0.2
+  pretty_dio_logger: ^1.3.1
+  json_serializer: ^0.2.0
+  json_serializable: ^6.7.1
+  permission_handler: ^11.1.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
