--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   http: ^1.2.0
   mockito: ^5.4.4
   test_cov_console: ^0.2.2
+  freezed: ^2.5.7
 
 dev_dependencies:
   flutter_test:
