--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   mockito: ^5.4.4
   test_cov_console: ^0.2.2
   freezed: ^2.5.7
+  animate_do: ^3.3.4
 
 dev_dependencies:
   flutter_test:
